opam-version: "2.0"
name: "objdump"
synopsis: "OCaml Runtime Representation Printer"
description: """Printing the OCaml runtime representations using the Obj module"""
maintainer: "favonia <favonia@gmail.com>"
authors: "favonia <favonia@gmail.com>"
license: "Apache-2.0"
homepage: "https://github.com/favonia/ocaml-objdump"
bug-reports: "https://github.com/favonia/ocaml-objdump/issues"
dev-repo: "git+https://github.com/favonia/ocaml-objdump.git"
depends: [
  "dune" {>= "2.0"}
  "ocaml" {>= "5.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "build" "-p" name "-j" jobs "@runtest"] {with-test}
  ["dune" "build" "-p" name "-j" jobs "@doc"] {with-doc}
]
